--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,6 +19,10 @@ h3 {
   font-weight:bold;
 }
 
+h5{
+  font-size:11px
+}
+
 p {
   font-size:14px;
 }
@@ -30,4 +34,6 @@ p {
 
 .footer {
   text-align: left;
+  color:white;
+  background-color: dimgray;
 }
